# zlaunch

./: Cargo.toml
src/: cli.rs  daemon.rs  lib.rs  main.rs
src/app/: events.rs  mod.rs  state.rs  window.rs
src/compositor/: detect.rs
src/desktop/: exec.rs
src/ipc/: client.rs  commands.rs  mod.rs  server.rs
src/items/: action.rs  application.rs  mod.rs  submenu.rs  window.rs
src/ui/: launcher.rs  mod.rs  theme.rs
src/ui/app_list/: delegate.rs  item.rs  mod.rs
src/ui/items/: application.rs  base.rs  delegate.rs  mod.rs
