[package]
name = "zlaunch"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed", branch = "main" }
gpui-component = "0.4.1"
gpui-component-assets = "0.4.1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
freedesktop-desktop-entry = "0.7"
freedesktop-icons = "0.4"
dirs = "5"
fuzzy-matcher = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lazy_static = "1.4"

[patch.crates-io]
gpui = { git = "https://github.com/zed-industries/zed", branch = "main" }
